--- a/todo/index.css
+++ b/todo/index.css
@@ -262,10 +262,10 @@ li a:hover{
 	box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.2);
 	transition: transform 0.3s ease;
 }
-/* .plus_more:hover{ */
-/* 	cursor: pointer; */
-/* 	transform: translateX(10px); */
-/* } */
+.plus_more:hover{
+	cursor: pointer;
+	transform: translateX(10px);
+}
 .notes_container{
 	display:flex;
 	flex-wrap:wrap;
