fixed javascript todo

--- a/todo/index.css
+++ b/todo/index.css
@@ -108,6 +108,7 @@ body {
 @media (hover: hover) {
     .list-item:hover {
         color: var(--list-hover);
+	cursor:pointer;
     }
     .list-item:hover > .setting {
         visibility: visible;
