--- a/main-page/main-page-styles.css
+++ b/main-page/main-page-styles.css
@@ -35,7 +35,11 @@ a{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    transition: top 0.5s ease-out;
+    transition: top 0.5s ease-out, transform 0.5s ease-out, opacity 0.5s ease-out;
+}
+
+#rightColumn.user-idle{
+    transform: translateY(-100%);
 }
 
 @media screen and (max-width: 450px) {
@@ -70,6 +74,8 @@ a{
     margin: 0;
     justify-content: flex-end;
 }
+
+
 .material-symbols-outlined{
     color: rgba(255, 255, 255, 0.843)!important;
     margin-top: 0.5rem;
@@ -105,6 +111,7 @@ button:hover{
     margin-top: 10px;
 }
 
+
 .side-nav-bar{
     display: flex;
     flex-direction: column;
@@ -116,6 +123,13 @@ button:hover{
     padding: 0.5vw;
     border-radius: 7px;
     background-color: rgb(34, 40, 48);
+    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+
+}
+
+#sideNavBar.user-idle{
+    transform: translateX(-100%);
+    opacity: 0;
 }
 
 @media screen and (max-width: 450px) {
@@ -136,6 +150,11 @@ button:hover{
     #Music{
         width: 320px!important;
         height: auto!important;
+    }
+    #motivation-popup{
+        width: 200px!important;
+        height: auto!important;
+        left: 30%!important;
     }
 }
 
